--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -26,6 +26,11 @@
     color: rgba(0, 0, 0, 0.5);
 }
 
+.user-component__subtitle i {
+    opacity: 1;
+    color: #f65b4a;
+}
+
 .user-component__avatar--xl {
     width: 80px;
     height: 80px;
