--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -1,20 +1,27 @@
 #chat-screen {
     background-color: #abc1d1;
-    height: 300vh;
+    height: 150vh;
 }
 
 #chat-screen .alt-header,
 #chat-screen .status-bar {
+    top: 0;
     position: fixed;
     width: 100%;
-    box-sizing: border-box;
-    top: 0px;
     background-color: #abc1d1;
+    box-sizing: border-box;
+}
+
+#chat-screen .status-bar {
     z-index: 2;
 }
 
 #chat-screen .alt-header {
     top: 10px;
+    z-index: 1;
+}
+.main-chat {
+    margin-top: 150px;
 }
 
 .main-chat {
@@ -27,8 +34,8 @@
 .chat__timestamp {
     color: white;
     background-color: #92a4b2;
-    padding: 15px 15px;
-    font-size: 20px;
+    padding: 15px;
+    font-size: 14px;
     border-radius: 25px;
     margin-bottom: 25px;
 }
@@ -43,32 +50,32 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    margin-right: 15px;
+    margin-right: 10px;
 }
 
 .message__author {
+    margin-bottom: 5px;
     display: block;
-    margin-bottom: 8px;
+}
+
+.message__info {
+    display: flex;
+    align-items: flex-end;
 }
 
 .message__bubble {
     background-color: white;
     padding: 13px;
+    font-size: 18px;
     border-radius: 15px;
     border-top-left-radius: 0px;
     margin-right: 5px;
-    font-size: 18px;
-}
-
-.message__info {
-    display: flex;
-    align-items: end;
 }
 
 .message__time,
 .message__author {
     opacity: 0.8;
-    font-size: 15px;
+    font-size: 14px;
 }
 
 .message-row--own {
@@ -85,4 +92,57 @@
 
 .message-row--own .message__info {
     flex-direction: row-reverse;
+}
+.reply {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 25px;
+    box-sizing: border-box;
+    align-items: center;
+}
+.reply .reply__column:first-child {
+    width: 10%;
+}
+.reply .reply__column:last-child {
+    width: 90%;
+    position: relative;
+}
+.reply i {
+    opacity: 0.5;
+}
+.reply input {
+    padding: 14px;
+    width: 100%;
+    border: var(--main-border);
+    border-radius: 25px;
+    box-sizing: border-box;
+}
+.reply__column:last-child > i,
+.reply__column:last-child button {
+    position: absolute;
+    right: 3px;
+    top: 3px;
+}
+.reply__column:last-child > i {
+    right: 50px;
+    top: 22px;
+    font-size: 25px;
+}
+.reply__column button {
+    background-color: var(--yellow);
+    border: none;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+.reply__column button i {
+    opacity: 1;
+}
+.reply__column button:focus,
+.reply__column button:active {
+    outline: none;
 }
