--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -20,15 +20,24 @@
     top: 10px;
     z-index: 1;
 }
-.main-chat {
-    margin-top: 150px;
+
+@keyframes fadeIn {
+    from {
+        transform: translateY(30px);
+        opacity: 0;
+    }
+    to {
+        transform: none;
+        opacity: 1;
+    }
 }
 
 .main-chat {
-    margin-top: 120px;
+    margin-top: 180px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    animation: fadeIn 0.8s linear;
 }
 
 .chat__timestamp {
@@ -40,10 +49,29 @@
     margin-bottom: 25px;
 }
 
+@keyframes fadeInMessage {
+    from {
+        transform: translateX(-100px);
+    }
+    to {
+        transform: none;
+    }
+}
+
+@keyframes fadeInMessageReverse {
+    from {
+        transform: translateX(100px);
+    }
+    to {
+        transform: none;
+    }
+}
+
 .message-row {
     width: 100%;
     display: flex;
     margin-bottom: 25px;
+    animation: fadeInMessage 0.8s linear;
 }
 
 .message-row img {
@@ -80,6 +108,7 @@
 
 .message-row--own {
     justify-content: flex-end;
+    animation: fadeInMessageReverse 0.8s linear;
 }
 
 .message-row--own .message__bubble {
@@ -103,6 +132,7 @@
     padding: 5px 25px;
     box-sizing: border-box;
     align-items: center;
+    transition: all 1s ease-in-out;
 }
 .reply .reply__column:first-child {
     width: 10%;
@@ -120,6 +150,7 @@
     border: var(--main-border);
     border-radius: 25px;
     box-sizing: border-box;
+    transition: all 0.3s ease-in-out;
 }
 .reply__column:last-child > i,
 .reply__column:last-child button {
@@ -145,4 +176,25 @@
 .reply__column button:focus,
 .reply__column button:active {
     outline: none;
+}
+
+.reply within .reply__column:first-child,
+.reply within .fa-smile-wink,
+.reply within button {
+    transition: opacity 0.3s ease-in-out;
+}
+
+.reply:focus-within .reply__column:first-child,
+.reply:focus-within .fa-smile-wink,
+.reply:focus-within button {
+    opacity: 0;
+}
+
+.reply:focus-within input {
+    width: 94vw;
+    transform: translateX(-10%) translateY(-80px);
+}
+
+.reply:focus-within {
+    transform: translateY(80px);
 }
